style: add column gap to body and fix code block formatting

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,6 +69,7 @@ body {
   font-weight: 500;
   border-radius: 5px;
   padding: 1rem;
+  column-gap: 1rem;
 }
 
 .tag_list__item {
@@ -113,7 +114,7 @@ body {
   background-color: var(--casi-blanco);
 }
 
-code { 
+code {
   color: rgb(0, 0, 0);
   background-color: rgba(128, 128, 128, 0.1);
   padding: 0.2rem 0.3rem;
